--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "animate.css": "^3.7.0",
     "axios": "^0.18.0",
     "element-ui": "^2.4.9",
     "font-awesome": "^4.7.0",
     "js-cookie": "^2.2.0",
+    "tween.js": "^16.6.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
